--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>хуй</title>
   </head>
   <body>
     <section class="main-page" id="main">
